--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-cookie": "^3.0.5",
     "lint-staged": "^15.5.1",
     "lucide-react": "^0.506.0",
+    "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
